add span element, float image with name heading to left, background color to entire page body, make fix to img src tag to include alt message, fix more typos and indentation
Authored by: Zachary Green <ultrazacky@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,15 @@ body {
   background-color: #deb887;
 }
 
+.floatMyImage {
+  float:left;
+}
+
 .bodyFont {
   text-align: center;
 }
 
+.textColor {
+  background-color: #7604b8;
+  color: #deb887;
+}
