add css code for boxes with margin around sections, float boxes left and right back and forth, typography for text in the hobbies section. delete unneccessary css files that cause problems
Authored by: Zachary Green <ultrazacky@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,28 @@ body {
   float:left;
 }
 
-.bodyFont {
-  text-align: center;
+.makeMyTextBling {
+  font-weight: bold;
+}
+
+.textBorderBox1 {
+  width: 50%;
+  padding: 20px;
+  border: solid black;
+  border-width:20px;
+  background-color: #ce4214;
+  margin-bottom:10px;
+  float: right;
+}
+
+.textBorderBox2 {
+  width: 50%;
+  padding: 20px;
+  border: solid black;
+  border-width:20px;
+  background-color: #ce4214;
+  margin-bottom:10px;
+  float: left;
 }
 
 .textColor {
